common/force-app/main/default/objects/Lead_Snapshot__c/Lead_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores snapshots of Leads Object</description>
    <label>Lead Snapshot</label>
    <nameField>
        <label>Lead Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>