common/force-app/main/default/objects/Lead_Snapshot__c/fields/Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Activity_Date__c</fullName>
    <description>Date the last activity was recorded</description>
    <label>Activity Date</label>
    <type>Date</type>
</CustomField>