common/force-app/main/default/objects/Lead_Snapshot__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Date the lead was created</description>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>