common/force-app/main/default/objects/Lead_Snapshot__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of a person</description>
    <label>First Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>