common/force-app/main/default/objects/Lead_Snapshot__c/fields/Investment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount__c</fullName>
    <description>The range of investment amount for leads</description>
    <label>Investment Amount</label>
    <length>240</length>
    <type>Text</type>
</CustomField>