common/force-app/main/default/objects/Lead_Snapshot__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Last name of the person</description>
    <label>Last Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>