common/force-app/main/default/objects/Lead_Snapshot__c/fields/Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner__c</fullName>
    <description>Owner of the Lead</description>
    <label>Lead Owner</label>
    <length>240</length>
    <type>Text</type>
</CustomField>