common/force-app/main/default/objects/Lead_Snapshot__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <description>Source of Leads</description>
    <label>Lead Source</label>
    <length>240</length>
    <type>Text</type>
</CustomField>