common/force-app/main/default/objects/Lead_Snapshot__c/fields/ML_Score__c.field-meta.xml
<CustomField>
    <fullName>ML_Score__c</fullName>
    <description>ML Score for leads</description>
    <label>ML Score</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>