common/force-app/main/default/objects/Lead_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Date on which the snapshot was taken</description>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>